--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -1,56 +1,65 @@
 {
-  "name": "mangaeon",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@radix-ui/react-dropdown-menu": "^2.1.4",
-    "@radix-ui/react-popover": "^1.1.4",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-tabs": "^1.1.2",
-    "@tanstack/react-query": "^5.62.8",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "dexie": "^4.0.10",
-    "localforage": "^1.10.0",
-    "lucide-react": "^0.469.0",
-    "next": "^15.1.6",
-    "p-queue": "^8.1.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "remark": "^15.0.1",
-    "remark-html": "^16.0.1",
-    "sharp": "^0.33.5",
-    "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7",
-    "tailwind-merge": "^2.5.5"
-  },
-  "devDependencies": {
-    "@tailwindcss/typography": "^0.5.15",
-    "@tanstack/eslint-plugin-query": "^5.62.1",
-    "@types/node": "^22.10.2",
-    "@types/react": "19.0.2",
-    "@types/react-dom": "19.0.2",
-    "autoprefixer": "^10.4.20",
-    "daisyui": "^4.12.22",
-    "encoding": "^0.1.13",
-    "eslint": "^9.17.0",
-    "eslint-config-next": "15.1.2",
-    "eslint-plugin-react-compiler": "^19.0.0-beta-b2e8e9c-20241220",
-    "postcss": "^8.4.49",
-    "prettier": "^3.4.2",
-    "prettier-plugin-tailwindcss": "^0.6.9",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.2"
-  },
-  "overrides": {
-    "@types/react": "19.0.2",
-    "@types/react-dom": "19.0.2"
-  }
+    "name": "proteto_manga",
+    "version": "1.0.0",
+    "description": "Node, Typescript, Jest, ESLint Template Project",
+    "main": "src/main.js",
+    "scripts": {
+        "dev": "ts-node -r tsconfig-paths/register ./src/main.ts --files",
+        "start": "node ./build/src/app.js",
+        "build": "rimraf ./build && tsc && tsc-alias",
+        "lint": "eslint .",
+        "lint:clear": "rm -f .eslintcache",
+        "lint:fix": "yarn run lint --fix",
+        "test": "jest --passWithNoTests --no-cache --runInBand",
+        "test:watch": "yarn run test --watch",
+        "test:staged": "lint-staged",
+        "test:coverage": "yarn run test --config jest.coverage.config.ts --coverage"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "MIT",
+    "resolutions": {
+        "glob": "^9",
+        "rimraf": "^4"
+    },
+    "dependencies": {
+        "better-sqlite3": "^11.10.0",
+        "body-parser": "^2.2.0",
+        "cors": "^2.8.5",
+        "dotenv": "^16",
+        "express": "4",
+        "jsonwebtoken": "^9.0.2"
+    },
+    "devDependencies": {
+        "@types/better-sqlite3": "^7.6.13",
+        "@types/body-parser": "^1.19.6",
+        "@types/cors": "^2.8.19",
+        "@types/express": "4",
+        "@types/jest": "^29.5.14",
+        "@types/jsonwebtoken": "^9.0.10",
+        "@types/node": "^24.0.3",
+        "@typescript-eslint/eslint-plugin": "^8",
+        "@typescript-eslint/parser": "^8",
+        "eslint": "^9",
+        "eslint-config-love": "^113",
+        "eslint-config-prettier": "^9",
+        "eslint-import-resolver-typescript": "^3",
+        "eslint-plugin-import": "^2",
+        "eslint-plugin-jest": "^28",
+        "eslint-plugin-markdown": "^5",
+        "eslint-plugin-n": "^17",
+        "eslint-plugin-prettier": "^5",
+        "eslint-plugin-promise": "^7",
+        "jest": "^29",
+        "jest-mock-extended": "^4.0.0-beta1",
+        "lint-staged": "^15",
+        "prettier": "^3",
+        "ts-jest": "^29",
+        "ts-node": "^10.9.2",
+        "ts-node-dev": "^2",
+        "tsc-alias": "^1",
+        "tsconfig-paths": "^4",
+        "typescript": "^5.8.3",
+        "typescript-transform-paths": "^3"
+    }
 }
