--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,25 +1,36 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
+  "name": "vue-material-dashboard",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "vite",
+    "serve": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "vue-tsc --noEmit && eslint . --ext .js,.ts,.vue",
+    "prettify": "prettier --write ."
   },
   "dependencies": {
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.4.2"
+    "axios": "^1.10.0",
+    "chart.js": "^4.5.0",
+    "core-js": "^3.6.5",
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0",
+    "vue-material": "^3.0.0-beta.1",
+    "vue-social-sharing": "^4.0.0-beta.2"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.4.2",
-    "@eslint/eslintrc": "^3"
+    "@vitejs/plugin-vue": "^5.0.4",
+    "@vue/eslint-config-prettier": "^9.0.0",
+    "@vue/eslint-config-typescript": "^13.0.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.17.0",
+    "prettier": "^2.8.8",
+    "sass": "^1.71.1",
+    "sass-loader": "^14.1.0",
+    "typescript": "^5.4.0",
+    "vite": "^5.2.0",
+    "vue-tsc": "^2.0.10"
   }
 }
